--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
    
     <title>Document</title>
 
-    <link rel="stylesheet" type="text/css" href="css/home.css">
+    <link rel="stylesheet" type="text/css" href="home.css">
 
 </head>
 
@@ -37,11 +37,11 @@
     
   <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
 
-  <script src="./js/type.js"></script>
+  <script src="type.js"></script>
 
-    <script src="./js/d3.min.js"></script>
+    <script src="d3.min.js"></script>
 
-    <script src="./js/home.js"></script>
+    <script src="home.js"></script>
 
 </body>
 
